k8s/k8s-manifests/helms/ingress-apple-banana/banana-srv.yaml
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678
      targetPort: 5678
  type: ClusterIP
