k8s/k8s-manifests/helms/ingress-apple-banana/ingress-play.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-banana-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: play.192.168.2.50.nip.io
  - http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port:
                number: 5678
        - path: /banana
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port:
                number: 5678


# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-ingress
#   namespace: playground
# spec:
#   rules:
#   - host: foo.bar.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: ServiceName
#             port:
#               number: 80
